# spin2dante

./: .dockerignore  .gitignore  Cargo.toml  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  repository.yaml
.github/workflows/: ci.yml  container.yml  release.yml
addons/spin2dante/: CHANGELOG.md  DOCS.md  Dockerfile  config.yaml  run.sh
addons/spin2dante/translations/: en.yaml
addons/statime/: DOCS.md  Dockerfile  config.yaml  run.sh
addons/statime/translations/: en.yaml
src/: bridge.rs  main.rs  metrics.rs
statime/: Dockerfile  entrypoint.sh  statime-docker.toml  statime-ptpv2-follower.toml  statime-ptpv2-master.toml
test/: docker-compose.32.yml  docker-compose.ma-interactive.yml  docker-compose.multi.yml  docker-compose.ptp.yml  docker-compose.ptpv2-test.yml  docker-compose.resilience.yml  docker-compose.sync-verify.yml  docker-compose.yml  run_test.sh
test/common/: audio_compare.py  generate_reference_signal.py
test/control_and_test/: Dockerfile  control_and_test.sh
test/control_and_test_multi/: Dockerfile  control_and_test_multi.sh
test/ma_monitor/: Dockerfile  monitor.sh
test/music_assistant/: docker-compose.yml  run.sh  stop.sh
test/resilience/: Dockerfile.server  Dockerfile.validator  test_server.py  validate.sh
test/sendspin_source/: Dockerfile  entrypoint.sh
test/sendspin_source_32/: Dockerfile  server.py
test/statime/: Dockerfile  statime-docker.toml
