[package]
name = "spin2dante"
version = "0.1.0"
edition = "2021"
description = "Bridge from Sendspin audio streams to DANTE (Audio over IP) via inferno_aoip"
license = "GPL-3.0-or-later OR AGPL-3.0-or-later"

[dependencies]
inferno_aoip = { git = "https://gitlab.com/lumifaza/inferno.git", branch = "dev" }
sendspin = "0.1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
atomic = "0.6"
claxon = "0.4"  # FLAC decoder for lossless audio

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
